--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/porosiabackground"
-    tools:context=".NewInvoiceActivity">
+    tools:context=".NewInvoiceActivity"
+    android:id="@+id/newOrderLayout">
 
 
     <LinearLayout
