Snackbar added at llogaria activity

--- a/app/src/main/res/layout/fragment_raportet.xml
+++ b/app/src/main/res/layout/fragment_raportet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mainfragmentbackground"
+    android:background="@drawable/welcomebackground"
     tools:context=".Raportet"
     android:orientation="vertical"
     android:layout_marginTop="60dp">
@@ -181,8 +181,9 @@
         android:id="@+id/ordersPaidCard"
         android:layout_width="267dp"
         android:layout_height="154dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="40dp"
         android:background="@color/cardview_light_background"
         app:cardCornerRadius="21dp"
         app:cardElevation="10dp"
