Classification of Activities into folders

--- a/app/src/main/res/layout/fragment_btn_porosite.xml
+++ b/app/src/main/res/layout/fragment_btn_porosite.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainfragmentbackground"
-    tools:context=".BtnPorositeFragment">
+    tools:context=".Porosite.BtnPorositeFragment">
 
     <TextView
         android:id="@+id/porositetitle"
