--- a/app/src/main/res/layout/fragment_fakturat.xml
+++ b/app/src/main/res/layout/fragment_fakturat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainfragmentbackground"
-    tools:context=".FakturatFragment">
+    tools:context=".Faturat.FakturatFragment">
 
     <Button
         android:id="@+id/btnfaktura"
