--- a/app/src/main/res/layout/activity_locationpreview.xml
+++ b/app/src/main/res/layout/activity_locationpreview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Locationpreview">
+    tools:context=".Kryefaqja.Locationpreview">
 
     <fragment
         android:layout_width="match_parent"
