--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/loginbackground"
-    tools:context=".LoginActivity">
+    tools:context=".Llogaria.LoginActivity">
 
     <TextView
         android:id="@+id/logoiocpart"
