--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Mainmenu"
+    tools:context=".Kryefaqja.Mainmenu"
     android:id="@+id/drawer">
 
     <include android:layout_height="match_parent"
