--- a/app/src/main/res/layout/activity_new_invoice.xml
+++ b/app/src/main/res/layout/activity_new_invoice.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainfragmentbackground"
-    tools:context=".NewInvoiceActivity">
+    tools:context=".Faturat.NewInvoiceActivity">
 
 
         <LinearLayout
