--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/welcomebackground"
-    tools:context=".Raportet"
+    tools:context=".Raportet.Raportet"
     android:layout_marginTop="60dp">
 <LinearLayout
     android:layout_width="match_parent"
