--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -14,24 +14,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <TextView
 
             android:id="@+id/tvInvTitle"
-            android:layout_width="236dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="87dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="87dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:text="Porosi e re"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/colorwhite"
             android:textSize="30sp"
             app:fontFamily="@font/ubuntu_medium" />
-
 
         <TextView
             android:id="@+id/userID"
@@ -243,7 +243,7 @@
 
         <Button
             android:id="@+id/btnInvSend"
-            android:layout_width="162dp"
+            android:layout_width="169dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/radioGroup"
             android:layout_alignParentStart="true"
@@ -251,7 +251,7 @@
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/button"
             android:text="Regjistro"
             android:textAllCaps="false"
