--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -285,7 +285,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="410dp"
+        android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginBottom="40dp"
         android:scrollbarThumbHorizontal="@drawable/scrollthumb"
