--- a/app/src/main/res/layout-xhdpi/activity_register.xml
+++ b/app/src/main/res/layout-xhdpi/activity_register.xml
@@ -18,7 +18,7 @@
         android:textColorHighlight="@color/colorPrimaryDarker"
         android:textColorHint="@color/colorPrimaryLight"
         android:textColorLink="@color/colorPrimary"
-        android:textSize="60sp"
+        android:textSize="40sp"
         app:fontFamily="@font/ubuntu_bold"
         app:layout_constraintBottom_toTopOf="@+id/logoiocpart"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,8 +28,9 @@
 
     <EditText
         android:id="@+id/txtkompaniaid"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Kompania"
@@ -38,16 +39,16 @@
         android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorgray"
         android:textColorLink="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/txtpassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="245dp" />
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtemail"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Email"
@@ -58,29 +59,29 @@
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/txtkompaniaid"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/logoiocpart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="36dp"
         android:text="INVOICES ON CLICK"
         android:textColor="@color/colorDarkGray"
-        android:textSize="17sp"
+        android:textSize="12sp"
         app:fontFamily="@font/ubuntu_medium"
         app:layout_constraintBottom_toTopOf="@+id/txtemri"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="300dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="32dp"
         android:text="Keni llogari ?"
         android:textColor="@color/colorDarkGray"
         android:textColorHighlight="@color/colorPrimary"
@@ -91,8 +92,9 @@
 
     <EditText
         android:id="@+id/txtemri"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Emri"
@@ -101,29 +103,30 @@
         android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorgray"
         android:textColorLink="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/txtemail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="183dp" />
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtpassword"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/btnRegjistrohu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.895"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnRegjistrohu"
-        android:layout_width="179dp"
-        android:layout_height="50dp"
+        android:layout_width="186dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/button"
         android:text="Regjistrohu"
         android:textAllCaps="false"
@@ -133,16 +136,17 @@
         android:textColorLink="@color/colorPrimaryDarker"
         android:textCursorDrawable="@color/colorPrimary"
         android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="317dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtKyqu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginBottom="32dp"
         android:clickable="true"
         android:linksClickable="true"
         android:text="Kyqu"
@@ -156,19 +160,19 @@
         app:fontFamily="@font/ubuntu_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.023"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="43dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="12dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
