--- a/app/src/main/res/layout/activity_list_view_on_click_listener.xml
+++ b/app/src/main/res/layout/activity_list_view_on_click_listener.xml
@@ -47,12 +47,12 @@
 
             <TextView
                 android:id="@+id/porosia2"
-                android:layout_width="200dp"
-                android:layout_height="37dp"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginLeft="0dp"
                 android:paddingStart="10dp"
                 android:text="TextView"
-                android:layout_marginLeft="150dp"
-                android:textAlignment="viewStart"
+                android:textAlignment="center"
                 android:textColor="@color/colorDarkGray"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,11 +62,11 @@
 
             <TextView
                 android:id="@+id/sasia2"
-                android:layout_width="159dp"
+                android:layout_width="match_parent"
                 android:layout_height="37dp"
-                android:layout_marginTop="-39dp"
+                android:layout_marginTop="39dp"
                 android:text="TextView"
-                android:textAlignment="viewEnd"
+                android:textAlignment="center"
                 android:textColor="@color/colorDarkGray"
                 android:textSize="18sp" />
 
@@ -85,6 +85,7 @@
                 android:id="@+id/derguesi2"
                 android:layout_width="match_parent"
                 android:layout_height="37dp"
+                android:layout_marginTop="70dp"
                 android:paddingStart="10dp"
                 android:text="TextView"
                 android:textAlignment="center"
@@ -149,7 +150,7 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textColor="@color/colorDarkGray"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
