--- a/app/src/main/res/layout-sw600dp/allinvoices_item.xml
+++ b/app/src/main/res/layout-sw600dp/allinvoices_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="450dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
@@ -13,7 +13,7 @@
         android:id="@+id/allinv_item_title"
         android:layout_width="130dp"
         android:layout_height="21dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="28dp"
         android:text="TextView"
         android:textAllCaps="true"
