--- a/app/src/main/res/layout/fragment_fakturat.xml
+++ b/app/src/main/res/layout/fragment_fakturat.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/button"
-        android:text="Shto Fakturen e re"
+        android:text="Shto Faturen e re"
         android:textAlignment="center"
         android:textColor="@color/colorwhite"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/button"
         android:padding="7dp"
-        android:text="Fakturat e Derguara"
+        android:text="Faturat e Derguara"
         android:textColor="@color/colorwhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -68,7 +68,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/button"
-        android:text="Fakturat"
+        android:text="Faturat"
         android:textColor="@color/colorwhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
