--- a/app/src/main/res/layout-land/fragment_fakturat.xml
+++ b/app/src/main/res/layout-land/fragment_fakturat.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/button"
-        android:text="Shto Fakturen e re"
+        android:text="Shto Faturen e re"
         android:textAlignment="center"
         android:textColor="@color/colorwhite"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="36dp"
         android:background="@drawable/button"
         android:padding="7dp"
-        android:text="Fakturat e Derguara"
+        android:text="Faturat e Derguara"
         android:textColor="@color/colorwhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
@@ -66,7 +66,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:background="@drawable/button"
-        android:text="Fakturat"
+        android:text="Faturat"
         android:textColor="@color/colorwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
